package com.wzy.proxy.dynamicproxy;

//接口
public interface ITeacherDao {
    void teach();  //授课方法
    String sayHello(String name);
}
